# mcp-playground

./: Cargo.toml
src/: main.rs
src/api/: mod.rs
src/api/server/: calculator.rs  mod.rs
src/commands/: mod.rs  server.rs
